:fix : Improve ui styling in components and add custom scrollbar styles

--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -228,3 +228,24 @@ caption {
 dialog * {
   scrollbar-width: thin;
 }
+
+/* Custom scrollbar */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-grey-500);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--color-grey-200);
+  border-radius: 10px;
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--color-grey-500) var(--color-grey-200);
+}
